<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.tabs.dashboard.DashboardFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/boxes_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/view_flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="green_box,yellow_box"
            app:flow_horizontalGap="@dimen/medium_space"
            app:flow_horizontalStyle="packed"
            app:flow_verticalGap="@dimen/medium_space"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mcmouse.nav_tabs.views.DashBoardItemView
            android:id="@+id/green_box"
            style="@style/DefaultDashBoardItemStyle"
            app:color="#008800"
            app:title="@string/green_box" />

        <com.mcmouse.nav_tabs.views.DashBoardItemView
            android:id="@+id/yellow_box"
            style="@style/DefaultDashBoardItemStyle"
            app:color="#888800"
            app:title="@string/yellow_box" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_no_boxes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_boxes"
        android:textSize="16sp"
        android:visibility="gone" />

</FrameLayout>