<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".screens.main.tabs.profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/medium_space">

        <TextView
            android:id="@+id/tv_screen_title"
            style="@style/TitleTextView"
            android:text="@string/profile_title_hint"
            app:layout_constraintBottom_toTopOf="@id/data_container"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/data_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_space"
            app:layout_constraintBottom_toTopOf="@id/button_edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_screen_title">

            <TextView
                android:id="@+id/tv_email_hint"
                style="@style/ProfileHintTextView"
                android:text="@string/field_email"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_username_hint"
                style="@style/ProfileHintTextView"
                android:text="@string/field_username"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_email_hint" />

            <TextView
                android:id="@+id/tv_created_at_hint"
                style="@style/ProfileHintTextView"
                android:text="@string/field_created_at"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_username_hint" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/start_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="tv_email_hint,tv_username_hint,tv_created_at_hint" />

            <TextView
                android:id="@+id/tv_email"
                style="@style/ProfileValueTextView"
                app:layout_constraintStart_toStartOf="@id/start_barrier"
                app:layout_constraintTop_toTopOf="@id/tv_email_hint"
                tools:text="test@test.test" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/ProfileValueTextView"
                app:layout_constraintStart_toStartOf="@id/start_barrier"
                app:layout_constraintTop_toTopOf="@id/tv_username_hint"
                tools:text="Admin" />

            <TextView
                android:id="@+id/tv_created_at"
                style="@style/ProfileValueTextView"
                app:layout_constraintStart_toStartOf="@id/start_barrier"
                app:layout_constraintTop_toTopOf="@id/tv_created_at_hint"
                tools:text="20.10.2020" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/button_edit_profile"
            style="@style/GlobalTextInputStyle.Big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/action_edit_profile"
            app:layout_constraintBottom_toTopOf="@id/button_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/data_container" />

        <Button
            android:id="@+id/button_logout"
            style="@style/GlobalTextInputStyle.Secondary.Big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_space"
            android:text="@string/action_logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_edit_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>